# torqle

./: .gitignore  LICENSE  Makefile  README.md  TODO.md  docker-compose.yml  docker-seed.js  index.html  package-lock.json  package.json  torqle.key.pub  vite.config.js
.github/workflows/: build.yml
data/: docker-seed-postgres.js
data/ssh_tunnel/: sshd_config.conf
seeders/: docker-seed-sqlite.js
src/: App.vue  helpers.js  helpers.mjs  main.js  menu.js  polyfill.js  polyfill.mjs  styles.scss  swatches.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: _russh.ssh.rs  _ssh-jumper.ssh.rs  _ssh2.ssh.rs  _thrussh.ssh.rs  adapters.mysql.bak  adapters.rs  adapters.sqlx.bak  connectors.rs  main.rs  menu.rs  ssh.rs  tests.rs
src-tauri/src/adapters/: example.rs  mod.rs  mysql.old-rs  mysql.rs  sqlite-async.rs  sqlite.rs  sqlx.rs
src-tauri/src/connectors/: mysql.rs
src/components/: ConnectView.vue  DataTable.vue  FavoritesList.vue  Greet.vue  IconButton.vue  Password.vue  QueryEditor.vue  QueryResults.vue  QueryStats.vue  QueryView.vue  QueryWait.vue  ResizeHandle.vue  SchemaSidebar.vue  Snacks.vue  SqlEditor.vue
src/components/fields/: ColorPicker.vue  Password.vue
src/components/fieldsets/: MysqlFieldset.vue  SqliteFieldset.vue  TestFieldset.vue
src/components/tabs/: QueryTab.vue
src/composables/: KeyboardShortcuts.vue
src/connectors/: Connector.js  MysqlConnector.js  SqliteConnector.js  TestConnector.js
src/scss/: fonts.scss  polyfill.scss  theme.scss  vuetify-theme.scss
src/services/: Client.js  Connector.js  Crypto.js  Crypto.spec.js  Favorites.js  KeyboardShortcuts.js  MysqlConnector.js  QueryResult.js  SqliteConnector.js  TestConnector.js
src/store/: favorites.js  main.js
src/views/: ActionView.vue  ConnectView.vue  QueryView.vue
test/seeders/: docker-seed-mongo.js
testdata/: sqlite-testdb.db
