[package]
name = "taurbee"
version = "0.0.1"
description = "A Tauri Database Client"
authors = ["jason@silvermast.io"]
license = "MIT"
repository = "https://github.com/silvermast/taurbee"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
uuid = { version = "1.3.1", features = ["v4", "fast-rng"] }
mysql_async = "*"
chrono = { version = "*", features = ["serde"] }
ssh_jumper = '*'
tokio = '*'
keytar = '*'
users = '*'
rand = '*'
hex = '*'
rsa = '*'
# async-sqlite = { version = "*", default-features = false }
sqlx = { version = '0.7', features = ["runtime-tokio", "sqlite"] }
rusqlite = "*"
tauri-plugin-fs = "2.0.0-rc"
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-os = "2.0.0-rc"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0-rc"
